# universal-ptr-network

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  train.py
src/architecture/: attention.py  decoder.py  ptr_network.py
src/architecture/feature_extractors/: feature_extractor.py  image_feature_extractor.py
src/feature_extractors/: image_feature_extractor.py  mlp.py
src/universal_ptr_network/: __init__.py  train.py
src/universal_ptr_network/architecture/: decoder.py  encoder.py  ptr_network.py
src/universal_ptr_network/feature_extractors/: image_feature_extractor.py  mlp.py
