[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal_ptr_network"
version = "0.0.4"
authors = [
  { name="Waldemar Kołodziejczyk", email="kolodziejczykwaldemar222@gmail.com"},
]
description = "A universal PyTorch implementation of the Pointer Network"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/KolodziejczykWaldemar/universal-ptr-network"
Issues = "https://github.com/KolodziejczykWaldemar/universal-ptr-network/issues"